--- a/index.html
+++ b/index.html
@@ -346,15 +346,15 @@ table.center {
   <p>Latest Academic Calendar PDF (Click here to download)</p> 
   </a>
   
-  <a href="resume.jpg" download> 
+  <a href="resume.JPG" download> 
   <p>Resume:</p>  
-  <img src="resume.jpg" alt="Resume" width="1000" height="600" class="centre"> 
+  <img src="resume.JPG" alt="Resume" width="1000" height="600" class="centre"> 
 	</a>
 	
  
-  <a href="timetable.jpg" download> 
+  <a href="timetable.JPG" download> 
   <p>Time Table:</p>
-  <img src="timetable.jpg" alt="Time Table" width="1000" height="200" class="centre">
+  <img src="timetable.JPG" alt="Time Table" width="1000" height="200" class="centre">
 	</a>
 	<p> &copy; Copyright holder 2023 <br>All right reserved. All website design and content can never be copy or transmit it as well as alter this site in any manner.</p>
 </div>
