--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ table.center {
   <source src="v2.mp4" type="video/mp4">
   </video>
   <video width="250" height="300"  controls>
-  <source src="v3.mp4" type="video/mp4">
+  <source src="v3.MP4" type="video/MP4">
   </video>
   <video width="250" height="300"  controls>
   <source src="v4.mp4" type="video/mp4">
