--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ table.center {
 <div id="Download" class="tabcontent"> <
   <h3>Download</h3>
   
-  <a href="academic.pdf" download> 
+  <a href="Academic.pdf" download> 
   <p>Latest Academic Calendar PDF (Click here to download)</p> 
   </a>
   
