--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ table.center {
 </style>
 <img src="moonlogo.jpg" width="100" height="125" class="centre"> </img>
 
-<button class="tablink" onclick="openPage('Home', this, 'mediumorchid')">Home</button>
-<button class="tablink" onclick="openPage('Biography', this, 'palevioletred')" id="defaultOpen">Biography</button>
+<button class="tablink" onclick="openPage('Home', this, 'mediumorchid')" id="defaultOpen">Home</button>
+<button class="tablink" onclick="openPage('Biography', this, 'palevioletred')">Biography</button>
 <button class="tablink" onclick="openPage('Resume', this, 'darkcyan')">Resume</button>
 <button class="tablink" onclick="openPage('Time', this, 'midnightblue')">Time Table</button>
 <button class="tablink" onclick="openPage('Galleries', this, 'darkolivegreen')">Galleries</button>
